--- a/api-DB-INTRANET/package.json
+++ b/api-DB-INTRANET/package.json
@@ -13,5 +13,8 @@
     "express": "^4.19.2",
     "msnodesqlv8": "^5.1.1",
     "mssql": "^10.0.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0"
   }
 }
