--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^0.8.0",
+    "bcrypt": "^6.0.0",
     "marked": "^15.0.8"
   },
   "devDependencies": {
